fixed viewport and added about page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>The Digital Doctor</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+<!-- 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"> -->
 	<meta name="description" content="Page description">
 	<meta name="author" content="Your name">
 
@@ -57,7 +57,7 @@
 						<ul class="nav">
 							<li class="active"><a href="index.html">Home</a></li>
 <!-- 							<li><a href="work.html">Our work</a></li> -->
-<!-- 							<li><a href="about.html">About us</a></li> -->
+							<li><a href="about.html">Speakers </a></li>
 <!-- 							<li><a href="plans.html">Pricing</a></li> -->
 							<li><button class="btn btn-primary"><a href="http://thedigitaldoctor-estw.eventbrite.co.uk/" id="top-button">Book now!</a></button></li>
 <!-- 							<li><a href="faq.html">FAQ</a></li> -->
